turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:18: error: not found: value x0
  allerVers(x0,y0-y*3)
            ^HouseMany:18: error: not found: value y0
  allerVers(x0,y0-y*3)
               ^